Class preview each

--- a/ConsoleRPG2/LibRPHG/LibRPG.csproj
+++ b/ConsoleRPG2/LibRPHG/LibRPG.csproj
@@ -45,6 +45,8 @@
     <Compile Include="AbstractUnits\IUnit.cs" />
     <Compile Include="Enviropment\LOGS.cs" />
     <Compile Include="Enviropment\Namegen.cs" />
+    <Compile Include="PlayerClasses\CharacterSelect.cs" />
+    <Compile Include="PlayerClasses\Mages.cs" />
     <Compile Include="PlayerClasses\Rangers.cs" />
     <Compile Include="PlayerClasses\zTestPlayer.cs" />
     <Compile Include="PlayerClasses\Warriors.cs" />
