--- a/ConsoleRPG2/LibRPHG/LibRPG.csproj
+++ b/ConsoleRPG2/LibRPHG/LibRPG.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Enviropment\LOGS.cs" />
     <Compile Include="Enviropment\Namegen.cs" />
     <Compile Include="PlayerClasses\CharacterSelect.cs" />
+    <Compile Include="PlayerClasses\Enemyes.cs" />
     <Compile Include="PlayerClasses\Mages.cs" />
     <Compile Include="PlayerClasses\Rangers.cs" />
     <Compile Include="PlayerClasses\zTestPlayer.cs" />
